css/main.css
/* ... */
  .content .playlist .song-container {
    position: relative;
    overflow: auto;
    -webkit-overflow-scrolling: touch; }
    .content .playlist .song-container .play-button {
      cursor: pointer;
      width: 60px;
      height: 58px;
      float: left;
      display: -webkit-box;
      display: flex;
      -webkit-box-align: center;
              align-items: center;
      -webkit-box-pack: center;
              justify-content: center; }
      .content .playlist .song-container .play-button .icon {
        height: 20px;
        width: auto; }
    .content .playlist .song-container .info-wrapper {
      box-sizing: border-box;
      padding-top: 0.75rem;
      float: left;
      height: 58px;
      max-width: calc(100% - 70px); }
      .content .playlist .song-container .info-wrapper .title, .content .playlist .song-container .info-wrapper .artist {
        white-space: nowrap;
        overflow: hidden; }
      .content .playlist .song-container .info-wrapper .title {
        color: #191747;
        font-size: 1.125rem;
        padding-bottom: 3px;
        max-height: 1.125rem; }
      .content .playlist .song-container .info-wrapper .artist {
        color: #797979;
        font-size: 0.75rem;
        max-height: 0.75rem; }
    .content .playlist .song-container .progress-wrapper {
      position: absolute;
      bottom: 0;
      width: 100%;
      height: 2px; }
      .content .playlist .song-container .progress-wrapper .cache-progress, .content .playlist .song-container .progress-wrapper .play-progress {
        position: absolute;
        height: 2px; }
      .content .playlist .song-container .progress-wrapper .cache-progress {
        background: #C5DFFC; }
      .content .playlist .song-container .progress-wrapper .play-progress {
        background: #191747; }
  .content .side-menu {
    background: #F6F6F6;
    position: fixed;
    box-shadow: 0px 3px 5px 0px rgba(50, 50, 50, 0.5);
    border-radius: 2px;
    height: auto; }
    .content .side-menu .artwork {
      width: 100%;
      height: auto;
      margin-bottom: 10px;
      border-top-left-radius: 5px;
      border-top-right-radius: 5px;
      color: #f00; }
    .content .side-menu .title, .content .side-menu .artist {
      margin-left: 5px;
      margin-right: 5px;
      text-align: center;
      white-space: nowrap;
      overflow: hidden; }
    .content .side-menu .title {
      color: #191747;
      font-size: 1.125rem;
      padding-bottom: 6px; }
    .content .side-menu .artist {
      color: #797979;
      font-size: 0.75rem; }
    .content .side-menu .controls {
      display: -webkit-box;
      display: flex;
      justify-content: space-around; }
      .content .side-menu .controls .prev-button, .content .side-menu .controls .play-button, .content .side-menu .controls .next-button {
        width: 60px;
        height: 60px;
        float: left;
        display: -webkit-box;
        display: flex;
        -webkit-box-align: center;
                align-items: center;
        -webkit-box-pack: center;
                justify-content: center;
        cursor: pointer; }
        .content .side-menu .controls .prev-button .icon, .content .side-menu .controls .play-button .icon, .content .side-menu .controls .next-button .icon {
          height: 20px;
          width: auto; }
      .content .side-menu .controls .prev-button, .content .side-menu .controls .next-button {
        -webkit-box-flex: 2;
                flex-grow: 2; }

.spinner {
  width: 40px;
  height: 40px;
  background: none;
  position: relative; }

.outer, .inner {
  position: absolute;
  border-radius: 50%;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  margin: auto; }

.outer::before, .inner::before, .outer::after, .inner::after {
  content: '';
  position: absolute;
  top: -5px;
  left: -5px;
  border: transparent 5px solid;
  width: inherit;
  height: inherit;
  border-radius: inherit; }

.outer::after, .inner::after {
  border-right-color: #191747;
  border-left-color: #191747; }

.outer::after {
  border-top-color: #191747; }

.inner::after {
  border-bottom-color: #191747; }

.outer {
  width: 30px;
  height: 30px;
  -webkit-animation: spin 0.9s infinite ease;
  animation: spin 0.9s infinite ease; }

.inner {
  width: 20px;
  height: 20px;
  background: none;
  -webkit-animation: spin 0.9s infinite ease alternate-reverse;
  animation: spin 0.9s infinite ease alternate-reverse; }

@-webkit-keyframes spin {
  from {
    -webkit-transform: rotate(0deg); }
  to {
    -webkit-transform: rotate(360deg); } }

@keyframes spin {
  from {
    -webkit-transform: rotate(0deg);
            transform: rotate(0deg); }
  to {
    -webkit-transform: rotate(360deg);
            transform: rotate(360deg); } }

.volume-slider {
  -webkit-user-select: none;
     -moz-user-select: none;
      -ms-user-select: none;
          user-select: none;
  position: relative;
  height: 20px;
  width: calc(100% - 40px);
  margin-left: 20px;
  margin-right: 20px;
  margin-bottom: 20px; }
  .volume-slider .level,
  .volume-slider .knob,
  .volume-slider .underlay {
    position: absolute; }
  .volume-slider .underlay {
    height: 2px;
    width: 100%;
    max-width: 100%;
    background: #ddd;
    top: 8px; }
  .volume-slider .knob {
    cursor: pointer;
    height: 15px;
    width: 15px;
    background: #F6F6F6;
    border-radius: 50%;
    box-shadow: 0px 3px 5px 0px rgba(50, 50, 50, 0.5); }
  .volume-slider .level {
    background: #191747;
    height: 2px;
    top: 8px; }

/*# sourceMappingURL=maps/main.css.map */

